# payroll-m365-demo

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: actionable-email-admin-setup.md  architecture.md  oam-registration.md
infrastructure/: deploy.sh  provision.sh
manifests/m365/: manifest.json
mock_data/: company.json  employees.json  exceptions.json  users.json
src/: app.py
src/agent/: graph.py
src/bot/: conversation_store.py  proactive.py
src/cards/: builders.py
src/common/: config.py  logging.py  oam_auth.py  tokens.py
src/demo_console/: routes.py
src/email_service/: sender.py  templates.py
src/flex/: store.py
tests/: SendOamCardTest.bas  SendOamHtmlTest.bas  SendOamTest.bas  generate-oam-test-bas.py  generate-test-emails.py  oam-test-body.html  send-oam-test-devicecode.ps1  send-oam-test.ps1  test_concurrent_context.py  test_smoke.py
